<resources>
    <string name="app_name">Traffic Alert</string>

    <string name="login_welcome">Welcome,</string>
    <string name="login_welcome_text">Log In!</string>
    <string name="email">EMAIL</string>
    <string name="login_password_hint">PASSWORD</string>
    <string name="login_password_ph">Enter Password</string>
    <string name="login_error_text">Incorrect Mobile Number or Password</string>
    <string name="login_forgot_text">Forgot Password?</string>
    <string name="signup_welcome_hello">Hello,</string>
    <string name="signup_welcome_text">Sign Up!</string>
    <string name="signup_name_hint">USER NAME</string>
    <string name="signup_mobile_hint">MOBILE</string>
    <string name="signup_password_hint">PASSWORD</string>
    <string name="signup_password_ph">Enter Password</string>
    <string name="signup_name_ph">Your Name</string>
    <string name="signup_mobile_ph">Your Mobile</string>
    <string name="signup_email_hint">E-Mail</string>
    <string name="signup_email_ph">Your email</string>
    <string name="signup_cnf_password_ph">Enter Password Again</string>
    <string name="signup_login_text">Already have an account? Log In</string>
    <string name="signup_conf_password_hint">CONFIRM PASSWORD</string>
    <string name="new_user">New User?</string>
    <string name="login_btn_text">Log In</string>
    <string name="are_you_the_app_admin">Are you the app administrate?</string>
    <string name="admin_verification_code">Admin Verification Code</string>
    <string name="bg_img_desc">Image View</string>
    <string name="send_email">Send Reset Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_email_to_reset_your_password">Send email to reset your password.</string>


    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_up">Sign Up</string>
    <string name="verification_code">Verification Code</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="loading">Loading…</string>
    <string name="cancel">Cancel</string>
    <string name="an_error_occurred">An unknown error occurred.</string>
    <string name="signing_in">Signing in …</string>


    <string name="report">Report</string>
    <string name="profile">Profile</string>

    <string name="login">Login</string>
    <string name="password">Password *</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="send_reset_email">Send Reset Email</string>
    <string name="to_fault_reporting_system">to Fault Reporting System</string>
    <string name="admin">Admin</string>
    <string name="tenant">Tenant</string>
    <string name="i_accept_the">I accept the</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="email_address">Email Address *</string>
    <string name="phone_number">Phone Number *</string>
    <string name="create_password">Create Password *</string>
    <string name="last_name">Last Name *</string>
    <string name="first_names">First Names *</string>
    <string name="select_your_display_image">Select your display image</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="firstnames">First Names</string>
    <string name="lastname">Lastname</string>
    <string name="phonenumber">Phone Number</string>
    <string name="emailaddress">Email Address</string>
    <string name="building_name">Building Name</string>
    <string name="dot">•</string>
    <string name="remove_image">Remove image</string>
    <string name="profile_image">Profile Image</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="vertical">|</string>
    <string name="select_your_building">Select your building.</string>
    <string name="admin_verification_password">Admin Verification Password</string>
    <string name="room_number">Room Number *</string>
    <string name="title_report">Report</string>
    <string name="create_a_report">Create a report</string>
    <string name="create_report">Create Report</string>
    <string name="report_image">Report image</string>
    <string name="anonymous">By Anonymous</string>
    <string name="dashboard">Dashboard</string>
    <string name="save_report">Save Report</string>
    <string name="edit_report">Edit Report</string>
</resources>